Api accepts city name in any case. Fix swagger description
